= 0.7.4 - ?
* bug fix
  * :enable_pagination is now respected in GridPanel

= 0.7.3 - 2011-10-23
* bug fix
  * :sorting_scope is now respected in GridPanel
  * regression: filtering on association column is fix (covered with tests)

= 0.7.2 - 2011-10-20
* bug fix
  * Filter on a date column
  * Using date column caused FormPanel to crash
  * Virtual columns are no longer editable by default

* improvements
  * New DSL method (model) for declaring a model for grids
  * New DSL method (column) for declaring columns for grids
  * New :override_columns config option for grid allows overriding specified column config without influencing other columns' order/presence
  * New DSL method (override_column) to override a specific column config without influencing other columns' order/presence.
  * Grid's title is set to model's pluralized name by default.
  * New :read_only option for FormPanel - makes all fields read-only and removes the "Apply" button.
  * FormPanel implements DSL shortcuts for the following options in default config: :model, :items, :record_id.
  * GridPanel implements DSL shortcuts for the following options in default config: :model, :add_form_config, :edit_form_config, :multi_edit_form_config.
  * New FormPanel option :multi_edit - set when the form is used for editing multiple records at a time
  * Introduce action columns (see BookGridWithColumnActions)

* API changes
  * Skip supporting ModelExtensions. The preferred way is using setters and getters on columns/fields.

= 0.7.1 - 2011-09-04
* bug fix
  * FormPanel: fix the netzke_load endpoint when association fields are present
  * dates were not displayed in date fields, and submitting a form with date fields might result in erasing those fields

* Rails 3.1 compatibility
  * no meta_where dependencies (searching and filtering done with Arel)

= 0.7.0 - 2011-08-09
* Core 0.7.0 and Ext 4 compatibility
* API changes