@@ -236,6 +236,12 @@ Scenario: GridPanel with overridden columns
   And I should see "Nabokov, Vladimir"
 
 @javascript
+  Scenario: Virtual attributes should not be sortable
+    Given a book exists with title: "Some Title"
+    When I go to the BookGridWithVirtualAttributes test page
+    Then the grid's column "In abundance" should not be sortable
+
+@javascript
   Scenario: Virtual attributes should not be editable
     Given a book exists with title: "Some Title"
     When I go to the BookGridWithVirtualAttributes test page
