@@ -165,6 +165,14 @@ Then /^the grid should have records sorted by "([^"]*)"\s?(asc|desc)?$/ do |colu
   JS
 end
 
+Then /^the grid's column "([^"]*)" should not be sortable$/ do |column_name|
+  column = column_name.downcase.gsub(' ', '_')
+  page.driver.browser.execute_script(<<-JS).should_not be_true
+    var col = Ext.ComponentQuery.query('gridcolumn[name="#{column}"]')[0];
+    return col.sortable;
+  JS
+end
+
 Then /^the grid's column "([^"]*)" should not be editable$/ do |column_name|
   column = column_name.downcase.gsub(' ', '_')
   page.driver.browser.execute_script(<<-JS).should be_true
